2012-11-21  Julien Bect  <julien.bect@supelec.fr>

	Added default values for some input arguments of stk_is_lhs(),
	and stricter dimension checking.

	* misc/test/stk_is_lhs.m: modified

2012-11-14  Julien Bect  <julien.bect@supelec.fr>

	Changed the upper bound on nu in stk_param_estim().

	* paramestim/stk_param_estim.m: modified

	Fixed a bug in stk_param_init().

	* paramestim/stk_param_init.m: modified

	Added a new MEX-file to compute a discretized fill distance.

	* misc/dist/stk_filldist.c: new MEX-file (source)
	* misc/dist/stk_filldist.m: new MEX-file (doc + tests)
	* misc/dist/stk_mindist.m: modified
	* misc/config/stk_compile_all.m: modified

	Added a new function to help initialize stk_param_estim().

	* paramestim/stk_param_init.m: new function
	* examples/01_kriging_basics/stk_example_kb02.m: modified
	* examples/01_kriging_basics/stk_example_kb03.m: modified

	Added a new function: stk_normalize().

	* utils/stk_normalize.m: new function

	Renamed some internal variables in stk_param_estim().

	* paramestim/stk_param_estim.m: modified

2012-11-06  Julien Bect  <julien.bect@supelec.fr>

	Improved the flexibility of stk_predict() and stk_param_estim(),
	which are now accepting both matrices and "data structures" (with
	an 'a' field) as input arguments.

	* utils/stk_datastruct.m: new function
	* core/stk_predict.m: modified
	* paramestim/stk_param_estim.m: modified

2012-11-04  Julien Bect  <julien.bect@supelec.fr>

	Improved graphical outputs in stk_example_kb03.

	* examples/01_kriging_basics/stk_example_kb03.m: modified

	Added a new function stk_plot2d() that serves has a wrapper around
	{surf|contour|mesh|pcolor}-type functions, to plot data defined
	over a two-dimensional regular grid.

	* misc/plot/stk_plot2d.m: new function

	Modified stk_predict() to avoid returning negative variances. When
	negative variances are encountered, they are set to zero and a
	warning is issued.

	* core/stk_predict.m: modified
